deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dspm
  labels:
    app: techd-dspm
